tweak scrollbar issue

--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -1,6 +1,3 @@
-body{
-	overflow: hidden;
-}
 h1,
 h2{
 	font-family: $type-stack-serif;
@@ -66,7 +63,4 @@ a{
 	img{
 		margin: 32px 0;
 	}
-}
-::-webkit-scrollbar { 
-    display: none; 
 }
